Flowplan implementation, plug-in refactor